# coord2

./: .gitignore  DESIGN.md  README.md
docs/pitch/: wave1-pr-draft.md
docs/proposals/teams-convergence/: 02-L1-coord-reconcile.md  03-packaging-decision.md  04-standalone-packaging.md  05-full-port-addons.md  06-migration.md  07-upstream-plan.md
engine/coord_engine/: __init__.py  cli.py  continuity.py  digest.py  forge.py  migrate.py  okf.py  presence.py  query.py  reconcile.py  tasks.py
engine/tests/: test_cli.py  test_continuity.py  test_forge.py  test_migrate.py  test_presence.py  test_reconcile.py  test_tasks.py  test_transport_parse.py
skills/fulcra-agent-automation/: SKILL.md
skills/fulcra-agent-automation/scripts/: install-heartbeat.sh  install-listener.sh  listener-tick.sh
skills/fulcra-agent-continuity/: SKILL.md
skills/fulcra-agent-presence/: SKILL.md
skills/fulcra-agent-reconcile/: SKILL.md  pyproject.toml
skills/fulcra-agent-reconcile/references/: reconcile-cli.md
skills/fulcra-agent-review/: SKILL.md
skills/fulcra-agent-roles/: SKILL.md
skills/fulcra-agent-roles/references/: roles-cli.md
skills/fulcra-agent-tasks/references/: tasks-cli.md
